<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="go2YourDetails"
    tools:context=".Activity7">

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/selectHall"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="171dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName7" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textColor="#BFB6B6"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="171dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/contactno"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/preferreddate"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/preferredtime"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/numberofGuests"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form1"
        android:textColor="#6F0B80"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/formForm"
        android:textColor="#6F0B80"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="315dp"
        android:layout_height="54dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/commentsSec"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="139dp"
        android:layout_height="59dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="#F44336"
        android:onClick="go2YourDetails"
        android:text="@string/btnForm"
        android:textColor="#0C0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


</androidx.constraintlayout.widget.ConstraintLayout>