<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity9">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="Total"
        android:textColor="#100F0F"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="Room Charge"
        android:textColor="#100F0F"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <EditText
        android:id="@+id/editTextTextPersonName16"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/totalCh"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toEndOf="@+id/textView35" />

    <EditText
        android:id="@+id/editTextTextPersonName15"
        android:layout_width="209dp"
        android:layout_height="58dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/hallCharge"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toEndOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtCart"
        android:textColor="#6E0880"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="69dp"
        android:src="@drawable/cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="209dp"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/roomCharge"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="Hall Charge"
        android:textColor="#100F0F"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="Reservation Summery"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>